SOE-3276: Banner overlay: button in wysiwyg not responsive scaling codeclimate fixes

--- a/scss/components/_soe_beans.scss
+++ b/scss/components/_soe_beans.scss
@@ -136,7 +136,6 @@
   }
 }
 
-.bean-stanford-postcard.view-mode-stanford_soe_default,
 .bean-stanford-postcard.view-mode-single_centered_button,
 .bean-stanford-postcard-linked {
   .postcard,
